# fcs_web

./: .gitignore  Cargo.toml  README.md  TODO.md  app.html  index.html.OLD  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  sitemap.xml  style.css
.github/workflows/: ci.yml  deploy-pages.yml
.lighthouseci/: lhr-1771556269407.html  lhr-1771556269407.json  lhr-1771556309477.html  lhr-1771556309477.json  lhr-1771628764620.html  lhr-1771628764620.json  lhr-1771628821509.html  lhr-1771628821509.json  links.json
e2e/: landing.spec.ts  responsive.spec.ts  visual.spec.ts
scripts/: check_bundle_sizes.sh
src/: app.rs  lib.rs  main.rs
src/components/: donate.rs  download.rs  features.rs  footer.rs  hero.rs  mod.rs  nav.rs  stats.rs  tech.rs
src/hooks/: mod.rs
tests/: ui_smoke.rs
