[package]
name = "fcs_web"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
js-sys = "0.3.86"
leptos = { version = "0.8.16", features = ["csr"] }
qrcodegen = "1.8.0"
wasm-bindgen = "0.2.109"
web-sys = { version = "0.3.86", features = [
  "Document",
  "DomTokenList",
  "Element",
  "IntersectionObserver",
  "IntersectionObserverEntry",
  "IntersectionObserverInit",
  "MediaQueryList",
  "NodeList",
  "Window"
] }
