[package]
name = "fcs_web"
version = "1.0.5"
edition = "2024"

[dependencies]
base64 = "0.22.1"
js-sys = "0.3.94"
leptos = { version = "0.8.17", features = ["csr"] }
qrcodegen = "1.8.0"
wasm-bindgen = "0.2.117"
web-sys = { version = "0.3.94", features = [
  "Document",
  "DomTokenList",
  "Element",
  "IntersectionObserver",
  "IntersectionObserverEntry",
  "IntersectionObserverInit",
  "MediaQueryList",
  "NodeList",
  "Window"
] }
